--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -235,13 +235,14 @@ Layout/EmptyLinesAroundModuleBody:
     - no_empty_lines
 
 # Checks whether the source file has a utf-8 encoding comment or not
-Style/Encoding:
-  EnforcedStyle: when_needed
-  SupportedStyles:
-    - when_needed
-    - always
 
-Style/FileName:
+# Style/Encoding:
+#   EnforcedStyle: when_needed
+#   SupportedStyles:
+#     - when_needed
+#     - always
+
+Naming/FileName:
   Exclude:
     - '**/Rakefile'
     - '**/Gemfile'
@@ -277,8 +278,8 @@ Style/HashSyntax:
     - ruby19
     - hash_rockets
 
-Style/IfUnlessModifier:
-  MaxLineLength: 80
+Metrics/LineLength:
+  Max: 80
 
 # Checks the indentation of the first key in a hash literal.
 Layout/IndentHash:
@@ -339,7 +340,7 @@ Metrics/MethodLength:
   CountComments: false  # count full line comments?
   Max: 10
 
-Style/MethodName:
+Naming/MethodName:
   EnforcedStyle: snake_case
   SupportedStyles:
     - snake_case
@@ -368,7 +369,7 @@ Style/PercentLiteralDelimiters:
     '%W': ()
     '%x': ()
 
-Style/PredicateName:
+Naming/PredicateName:
   NamePrefixBlacklist:
     - get_
 
@@ -453,7 +454,7 @@ Layout/TrailingBlankLines:
     - final_newline
     - final_blank_line
 
-Style/TrailingCommaInLiteral:
+Style/TrailingCommaInArrayLiteral:
   # If `comma`, the cop requires a comma after the last item in an array or
   # hash, but only when each item is on its own line.
   # If `consistent_comma`, the cop requires a comma after the last item of all
@@ -497,14 +498,14 @@ Style/TrivialAccessors:
     - to_s
     - to_sym
 
-Style/VariableName:
+Naming/VariableName:
   EnforcedStyle: snake_case
   SupportedStyles:
     - snake_case
     - camelCase
 
-Style/WhileUntilModifier:
-  MaxLineLength: 80
+Metrics/LineLength:
+  Max: 80
 
 Style/WordArray:
   MinSize: 0
@@ -516,7 +517,7 @@ Lint/AssignmentInCondition:
   AllowSafeAssignment: true
 
 # Align ends correctly.
-Lint/EndAlignment:
+Layout/EndAlignment:
   # The value `keyword` means that `end` should be aligned with the matching
   # keyword (`if`, `while`, etc.).
   # The value `variable` means that in assignments, `end` should be aligned
@@ -531,7 +532,7 @@ Lint/EndAlignment:
     - start_of_line
   AutoCorrect: false
 
-Lint/DefEndAlignment:
+Layout/DefEndAlignment:
   # The value `def` means that `end` should be aligned with the def keyword.
   # The value `start_of_line` means that `end` should be aligned with method
   # calls like `private`, `public`, etc, if present in front of the `def`
